# muspinsim

./: .coveragerc  .flake8  .gitignore  404.html  CITATION.cff  MANIFEST.in  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-lint.txt  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build.yml  citation-cff.yml  docs.yml  test.yml
bmark/: profileLIntDec.py
docs/: README.md  mkdocs.yml
docs/developer_notes/: input_handling_notes.md  memory_overflow_issue_notes.md  muspinsim_workflow_notes.md  overview.md
docs/docs/: examples.md  hamiltonian.md  index.md  input.md  installation.md  theory_1.md  theory_2.md  tools.md  tutorial.md
example1/: index.html
examples/: index.html
examples/alc/: alc.in
examples/basic/: basic.in  basic.yaml
examples/basic_alc/: basic_alc.in
examples/basic_powder/: basic_powder.in
examples/celio/: celio.in
examples/dissipation/: dissipation.in
examples/fitting/: fitting.in
examples/fluorine/: fluorine.in  fluorine_tf.in  fluorine_zf.in
examples/fluorine_dissipation/: fluorine_tf_dissip.in  fluorine_zf_dissip.in
examples/hfine_powder/: hfine_powder.in
examples/temperature/: high_T.in  low_T.in
examples/zeeman/: zeeman.in
hamiltonian/: index.html
html/muspinsim/: constants.html  experiment.html  fitting.html  hamiltonian.html  index.html  lindbladian.html  mpi.html  simconfig.html  spinop.html  spinsys.html  utils.html  version.html
input/: index.html
installation/: index.html
muspinsim/: __init__.py  __main__.py  __main__.py.old  celio.py  constants.py  cython_utils.pyx  experiment.py  fitting.py  hamiltonian.py  hamiltonian2.py  input.py  input_old.py  lindbladian.py  mpi.py  simconfig.py  spinop.py  spinsys.py  utils.py  validation.py  version.py
muspinsim/cpp/: base.h  celio.cpp  main.cpp  parallel.cpp  test.cpp
muspinsim/cython/: parallel.pyx
muspinsim/input/: __init__.py  (+8 more)
search/: search_index.json
test/: test_args.py  test_celio.py  test_config.py  test_constants.py  test_experiment.py  test_fitting.py  test_hamiltonian.py  test_input.py  test_input_old.py  test_lark.py  test_lindbladian.py  test_mpi.py  test_spinop.py  test_spinsys.py  test_utils.py  test_validation.py
theory_1/: index.html
theory_2/: index.html
tools/: index.html
tutorial/: index.html
(+25 files in other folders)
