[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "pybind11",
    # See https://numpy.org/devdocs/user/troubleshooting-importerror.html#c-api-incompatibility
    "numpy<2",
    "scipy",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]

skip = [
    # Skip building on CPython 3.8 & 3.9 on all platforms as muspinsim requires >= 3.10
    "cp38-*", "cp39-*",
    # The following are disabled due to errors - it seems other libraries
    # ignore these as well
    "*-win32", "*-manylinux_i686",
    "*-musllinux*"
]